        (WebCore::appendPreflightResultCacheEntry):
        (WebCore::canSkipPrelight):
        (WebCore::XMLHttpRequest::makeCrossSiteAccessRequestWithPreflight):
        (WebCore::parseAccessControlAllowList):
        (WebCore::parseAccessControlMaxAge):
        (WebCore::XMLHttpRequest::didReceiveResponsePreflight):

2008-08-04  Eric Seidel  <eric@webkit.org>

        Reviewed by hyatt.

        Clean up Gradient constructors, make sure all members are initialized.

        * platform/graphics/Gradient.cpp:
        (WebCore::Gradient::Gradient):

2008-08-02  Maxime Britto  <britto@apple.com>

        Reviewed by Eric Seidel.

        <rdar://problem/6118969>
        https://bugs.webkit.org/show_bug.cgi?id=19971 
        Modifiy the cursor interactively when on panning mode (middle click auto scroll)
        When the panning is in progress the cursor is an arrow representing the direction of the current scroll

        * page/EventHandler.cpp:
        (WebCore::EventHandler::autoscrollTimerFired): Before each scroll we actualize the cursor to match the current direction
        (WebCore::EventHandler::setPanScrollCursor): determines the direction of the upcoming scroll.
        (WebCore::EventHandler::handleMouseMoveEvent):
        * page/EventHandler.h: 
        * platform/Cursor.h: Add propotypes for the new cursor functions
        * platform/gtk/CursorGtk.cpp: to avoid build break
        (WebCore::middlePanningCursor):
        (WebCore::eastPanningCursor):
        (WebCore::northPanningCursor):
        (WebCore::northEastPanningCursor):
        (WebCore::northWestPanningCursor):
        (WebCore::southPanningCursor):
        (WebCore::southEastPanningCursor):
        (WebCore::southWestPanningCursor):
        (WebCore::westPanningCursor):
        * platform/mac/CursorMac.mm: to avoid build break
        (WebCore::middlePanningCursor):
        (WebCore::eastPanningCursor):
        (WebCore::northPanningCursor):
        (WebCore::northEastPanningCursor):